--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "express-session": "^1.15.6",
     "express-status-monitor": "^1.2.3",
     "express-validator": "^5.3.1",
+    "html-pdf": "^2.2.0",
+    "jade": "^1.11.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "lusca": "^1.6.1",
@@ -45,12 +47,12 @@
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.9.1",
+    "pdfmake": "^0.1.56",
     "popper.js": "^1.14.7",
     "pug": "^2.0.3",
     "request": "^2.88.0",
-    "validator": "^10.11.0",
-    "html-pdf": "^2.2.0",
-    "jade": "1.11.0"
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
